--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "webpack": "^2.4.1"
   },
   "dependencies": {
+    "babel-loader": "^6.4.1",
     "jquery": "^3.2.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
