--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "Medina",
   "version": "1.0.0",
-  "description": "",
+  "description": "Company website",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Sophia Liu",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.24.1",
@@ -15,9 +15,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.0",
-    "install": "^0.8.8",
     "node-sass": "^4.5.2",
-    "npm": "^4.5.0",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
     "webpack": "^2.4.1"
@@ -27,6 +25,7 @@
     "jquery": "^3.2.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-router": "^4.1.1"
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1"
   }
 }
