--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Medina",
+  "name": "Medina Landscaping",
   "version": "1.0.0",
   "description": "Company website",
   "main": "webpack.config.js",
