--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "node": "6.10.2",
     "npm": "3.10.10"
   },
+  "scripts": {
+    "start": "node webpack.config.js"
+  },
   "keywords": [],
   "author": "Sophia Liu",
   "license": "ISC",
