--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Company website",
   "main": "webpack.config.js",
   "engines": {
-    "node": "4.1.1",
-    "npm": "2.1.x"
+    "node": "6.10.2",
+    "npm": "3.10.10"
   },
   "scripts": {
-    "postinstall": "./node_modules/.bin/webpack"
+    "start": "node webpack.config.js"
   },
   "keywords": [],
   "author": "Sophia Liu",
