--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "3.9.3"
   },
   "scripts": {
-     "postinstall": "./node_modules/.bin/webpack"
+     "start": "./node_modules/.bin/webpack"
   },
   "keywords": [],
   "author": "Sophia Liu",
