--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "npm": "3.10.10"
   },
   "scripts": {
+    "heroku-postbuild": "webpack -p --config ./webpack.prod.config.js --progress",
     "postinstall": "./node_modules/.bin/webpack"
   },
   "keywords": [],
@@ -25,7 +26,6 @@
     "style-loader": "^0.16.1"
   },
   "dependencies": {
-    "babel-loader": "^6.4.1",
     "jquery": "^3.2.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
