--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "4.2.0"
   },
   "scripts": {
-    "heroku-postbuild": "webpack -p --config ./webpack.prod.config.js --progress",
+   "start": "echo hi",
     "postinstall": "./node_modules/.bin/webpack"
   },
   "keywords": [],
