--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "4.2.0"
   },
   "scripts": {
-    "start": "node webpack.config.js"
+    "postinstall": "./node_modules/.bin/webpack"
   },
   "keywords": [],
   "author": "Sophia Liu",
