--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "jquery": "^3.2.1",
+    "lightbox2": "^2.9.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router": "^3.0.0",
