--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "node-sass": "^4.5.2",
     "react": "^15.5.4",
     "sass-loader": "^6.0.3",
-    "style-loader": "^0.16.1"
+    "style-loader": "^0.16.1",
+    "webpack": "^1.13.1"
   },
   "dependencies": {
     "jquery": "^3.2.1",
@@ -30,7 +31,6 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router": "^3.0.0",
-    "react-router-dom": "^4.1.1",
-    "webpack": "^2.4.1"
+    "react-router-dom": "^4.1.1"
   }
 }
